# zippity

./: .gitignore  README.md  TODO.md  ZIPPITYDO.md  pyproject.toml
tests/: test_cli.py  test_fs_utils.py  test_todo_utils.py
tests/test_environment/todo_test_files/: file_with_todos.py  file_without_todos.txt
workflows/: python-publish.yml
zippity/: TODO.md  __init__.py  cli.py  cli_utils.py  file_extensions.py  fs_utils.py  git_utils.py  todo_utils.py
zippity-py/: todo_utils.py
zippity/template/: render.py  template.md.jinja
zippity_py/: __init__.py  cli_utils.py  todo_utils.py
zippity_py/template/: render.py
