[tool.poetry]
name = "zippity"
version = "0.1.0"
description = "packages the required context files into a single MD file"
authors = ["lumpenspace <lumpenspace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
gitignore-parser = "^0.1.10"
jinja2 = "^3.1.3"
pyperclip = "^1.8.2"
clipboard-maximizer = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zippity = 'zippity.cli:main'