[tool.poetry]
name = "zippity"
version = "0.1.0"
description = "CLI tool to create summary files with todos and extracts from source code for chatbots."
authors = ["lumpenspace <lumpenspace@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
gitignore-parser = "^0.1.10"
jinja2 = "^3.1.3"
clipboard-maximizer = "^0.2.2"
comment-parser = "^1.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
zippity = 'zippity.cli:main'